Corrigido test de relatorio de maior faturamento